# crunchyma

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml  fmt.yml  lint.yml  release.yml
src/: cmd.rs  db.rs  lib.rs  main.rs  releases.rs  utils.rs
src/entity/: episodes.rs  mod.rs  prelude.rs  users.rs
