[package]
name = "crunchyma"
version = "0.1.5"
edition = "2024"

[dependencies]
chrono = "0.4.42"
crunchyroll-rs = { git = "https://github.com/jokelbaf/crunchyroll-rs.git" }
dotenvy = "0.15.7"
log = "0.4.28"
pretty_env_logger = "0.5.0"
regex = "1.12.2"
reqwest = "0.12.24"
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
teloxide = { git = "https://github.com/teloxide/teloxide.git", features = ["macros"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros"] }
uuid = { version = "1.18.1", features = ["v4"] }
